퀘스트 일부 및 스웨거 수정
